syntax = "proto3";

package warcraft;

import "common/common.proto";
import "warcraft/character-type.proto";
import "warcraft/character-responses.proto";
import "warcraft/character-requests.proto";

option go_package = "github.com/ToxicToast/Azkaban-Go/libs/proto/warcraft;warcraft";

//


service WarcraftCharacterService {
    rpc GetCharacters (common.ListRequest) returns (GetCharactersResponse);
    rpc GetCharactersById (common.ByIdRequest) returns (Character);
    rpc GetCharactersByCharacterId (GetCharacterByCharacterIdRequest) returns (Character);
    rpc GetCharactersByUserId (common.ByUserIdRequest) returns (GetCharactersResponse);
    rpc GetCharactersByGuild (GetCharacterByGuildRequest) returns (GetCharactersResponse);
    rpc CreateCharacter (CreateCharacterRequest) returns (Character);
    rpc AssignCharacter (AssignCharacterRequest) returns (Character);
}