syntax = "proto3";

package warcraft.types;

import "google/protobuf/wrappers.proto";

option go_package = "github.com/ToxicToast/Azkaban-Go/libs/proto/warcraft/types;types";

message GetCharacterByCharacterIdRequest {
  string character_id = 1;
  optional bool with_deleted = 2;
}

message GetCharacterByGuildRequest {
  optional string guild = 1;
  optional bool with_deleted = 2;
  optional int64 limit = 3;
  optional int64 offset = 4;
}

message CreateCharacterRequest {
  string region = 1;
  string realm = 2;
  string name = 3;
}

message AssignCharacterRequest {
  int64 id = 1;
  google.protobuf.Int64Value user_id = 2;
}